# veclite

./: LICENSE  pyproject.toml  readme.md  requirements.txt
tests/: vec_create.py
veclite/: matrix.py  vector.py
